Fix positioning of update/delete-button of questions on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -80,7 +80,7 @@ footer {
 }
 
 /* Buttons */
-#updateDeleteButtonQuestionGroup {
+.updateDeleteButtonGroup {
   min-width: 56px;
 }
 
